<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/description_restpassword"
        android:layout_width="370dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"

        android:layout_marginBottom="612dp"
        android:padding="20dp"
        android:text="@string/enter_the_code_sent_to_uyout_by_email_or_sms_mobile_number"
        android:textColor="@color/cardview_dark_background"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds" />
    <TextView
        android:id="@+id/description"
        android:layout_width="361dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"

        android:padding="16dp"
        android:text="@string/please_enter_your_new_password_and_comfirm_it"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_reset"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_lock_24"

        android:gravity="start"
        android:hint="   Password"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableEnd="@drawable/baseline_remove_red_eye_24"


        app:layout_constraintVertical_bias="0.357" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_reset_comfirm"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawableEnd="@drawable/baseline_remove_red_eye_24"

        android:gravity="start"
        android:hint="   Comfirm Paswword"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <Button
        android:id="@+id/btn_submit_reset"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679"


        />

</androidx.constraintlayout.widget.ConstraintLayout>