<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/description_"
        android:layout_width="370dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"

        android:layout_marginBottom="612dp"
        android:padding="20dp"
        android:text="@string/enter_the_code_sent_to_uyout_by_email_or_sms_mobile_number"
        android:textColor="@color/cardview_dark_background"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_premier"
        android:layout_width="45dp"
        android:layout_height="49dp"
        android:layout_marginStart="68dp"
        android:backgroundTint="@color/colorPrimary"


        android:inputType="number"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        android:maxLength="1"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_deuxieme"
        android:layout_width="45dp"
        android:layout_height="49dp"
        android:layout_marginStart="128dp"
        android:backgroundTint="@color/colorPrimary"


        android:inputType="number"
        android:maxLength="1"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_troisieme"
        android:layout_width="45dp"
        android:layout_height="49dp"
        android:layout_marginStart="180dp"
        android:backgroundTint="@color/colorPrimary"


        android:inputType="number"
        android:maxLength="1"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_quatrieme"
        android:layout_width="45dp"
        android:layout_height="49dp"
        android:layout_marginStart="240dp"
        android:backgroundTint="@color/colorPrimary"


        android:inputType="number"
        android:maxLength="1"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"


        />

    <Button
        android:id="@+id/verify"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/verify"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"


        />

    <TextView
        android:id="@+id/description"
        android:layout_width="365dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"

        android:layout_marginBottom="244dp"
        android:padding="12dp"
        android:text="didn't receive any code ?"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/string2_resent"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginStart="128dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTextViewClick_resent"
        android:padding="16dp"
        android:text="@string/resent_code"
        android:textColor="#f90043"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>