<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="125dp"
        android:layout_marginStart="140dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_mail_24"

        android:gravity="start"
        android:hint="   Email"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputfullName"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="68dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_account_circle_24"

        android:gravity="start"
        android:hint="   FullName"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_lock_24"

        android:gravity="start"
        android:hint="   Password"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmpassword"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="68dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_lock_24"

        android:gravity="start"
        android:hint="   Comfirm Password"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"


        />

    <TextView
        android:id="@+id/id_footer"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:text="by registring you agree to our "
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/stringterms"
        android:layout_width="191dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTextViewClick"
        android:padding="16dp"
        android:text="@string/terms_and_coditions"
        android:textColor="#f90043"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/id_and"
        android:layout_width="52dp"
        android:layout_height="53dp"
        android:layout_marginStart="204dp"
        android:text="and "
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/string_policy"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginStart="244dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTextViewClick2"
        android:padding="16dp"
        android:text="@string/privacy_and_policy"
        android:textColor="#f90043"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>