<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/facebook"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="56dp"
        android:src="@drawable/ic_btn_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="244dp"
        android:src="@drawable/ic_btn_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:padding="16dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#f90043"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/string2"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_marginStart="248dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTextViewClick"
        android:padding="16dp"
        android:text="@string/register_now"
        android:textColor="#f90043"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="125dp"
        android:layout_marginStart="140dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputName"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_mail_24"

        android:gravity="start"
        android:hint="   Email"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295"


        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/baseline_lock_24"

        android:gravity="start"
        android:hint="   Password"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411"


        />

    <CheckBox
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:buttonTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:padding="16dp"
        android:text="Remember me "
        android:textColor="#f90043"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="TextViewClick"
        android:padding="16dp"
        android:text="Forgot password ?"
        android:textColor="#f90043"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textSize="20dp"


        />

    <TextView
        android:id="@+id/id_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:text="OR"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>